# interactive-graph-theory

./: package-lock.json  package.json  tailwind.config.cjs
client/: package-lock.json  package.json
client/src/components/: AuthButton.svelte  EditPanel.svelte  Group.svelte  NewNodePanel.svelte  Node.svelte  UncreatedNode.svelte
client/src/components/edges/: Edge.svelte  EditEdgePanel.svelte
client/src/context/: isDarkMode.svelte
client/src/routes/: index.svelte
client/src/stores/: EdgeEditPanels.ts  Edges.ts  NodeStore.ts  Scale.ts
client/src/utils/: clickOutside.ts
server/: Cargo.toml
server/migrations/: 0001_create_user.sql
server/src/: auth.rs  lib.rs  main.rs
src/components/: Group.svelte  Node.svelte
src/context/: isDarkMode.svelte
src/routes/: index.svelte
