[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.14"
async-graphql-warp = "4.0.14"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
oauth2 = "4.3.0"
anyhow = "1.0.68"
url = "2.3.1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "macros",
    "postgres",
    "chrono",
    "migrate",
    "offline",
    "runtime-tokio-rustls"
]